[tool.poetry]
name = "lasp_opensearch_data_center"
version = "1.0.8"
description = "Construct library for creating a CSV ingest pipeline into OpenSearch with a front end website."
authors = [
    "Gavin Medley <gavin.medley@lasp.colorado.edu>",
    "Luke Soderquist <luke.soderquist@lasp.colorado.edu>",
    "Brian McClellan <brian.mcclellan@lasp.colorado.edu>"
]
maintainers = [
    "Gavin Medley <gavin.medley@lasp.colorado.edu>",
]
readme = "README.md"
include = ["README.md", "CHANGELOG.md", "lambda"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aws-cdk-lib = "^2.0.0"
constructs = "^10.0.0"

[tool.poetry.group.dev.dependencies]
opensearch_data_center_lambda_runtime = {path="lasp_opensearch_data_center/lambda", develop=true}
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
