[tool.poetry]
name = "opensearch_data_center_lambda_runtime"
version = "0.1.0"
description = "Dependency manager for lambda runtime of lasp_opensearch_data_center construct library"
authors = [
    "Mike Bonnici <michael.bonnici@lasp.colorado.edu>",
    "Brian McClellan <brian.mcclellan@lasp.colorado.edu>",
    "Gavin Medley <gavin.medley@lasp.colorado.edu>"
]

[tool.poetry.dependencies]
python = "^3.9"
awslambdaric = "^2.0.4"  # Lambda Runtime Interface Client
opensearch-py = "^2"
boto3 = "^1"
psutil = "^5"
cloudpathlib = "^0.10.0"
PyYAML = "^6.0"
requests_aws4auth = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
